feat: seasons (#7)
* seasons: remove year from db

* seasons: add repo

* seasons: add service

* games: add handlers

* seasons: fix typos and add to handler

* openapi: regen

* www: update api client

* www: added season selector to games

* www: add season filter to leaderboard
